ImageController; app now has the ability to upload in image to the db